[package]
name = "invisibot-rust-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
invisibot_game = { git = "https://github.com/ViddeM/invisibot", branch = "feature/clients-question-mark" }
tungstenite = "0.19.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"
